--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="save_button">Save</string>
-    <string name="Enter_text">Enter text</string>
-    <string name="Go_next_button">Go to 2nd</string>
+    <string name="saveButton">Save</string>
+    <string name="EnterText">Enter text</string>
+    <string name="GoNextButton">Go to 2nd</string>
     <string-array name="theme_options">
         <item>Default</item>
         <item>Dark theme</item>
         <item>Light theme</item>
     </string-array>
-    <string name="read_storage">Read storage</string>
-    <string name="Storage_text">Click to display stored message!</string>
+    <string name="readStorage">Read storage</string>
+    <string name="StorageText">Click to display stored message!</string>
+    <string name="inputHint">Try typing "Good morning!"</string>
+    <string name="goBack">Go back</string>
 </resources>
